fix: Make `.ArticleCarouselCard__illustration` overlap card border

--- a/src/scss/ArticleCarousel.scss
+++ b/src/scss/ArticleCarousel.scss
@@ -104,6 +104,7 @@
 		position: relative;
 		padding-top: percentage(300/ ($grid-column * 3 + 4 * $grid-gutter));
 		display: block;
+		margin: 0 -1px;
 		margin-bottom: grid-units(4);
 	}
 	.ArticleCarouselCard__illustration--photo {
